--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/takuyaKIKUCHI99/forkify/issues"
   },
-  "homepage": "https://github.com/takuyaKIKUCHI99/forkify#readme"
+  "homepage": "https://github.com/takuyaKIKUCHI99/forkify#readme",
+  "devDependencies": {
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
+  }
 }
