--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.8.7",
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "core-js": "^3.6.4",
+    "regenerator-runtime": "^0.13.5"
   }
 }
